--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,12 @@
 <artifactId>h2</artifactId>
 </dependency>
 
+<dependency>
+<groupId>org.springframework.boot</groupId>
+<artifactId>spring-boot-starter-jdbc</artifactId>
+</dependency>
+
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
